--- a/auctioning_platform/pyproject.toml
+++ b/auctioning_platform/pyproject.toml
@@ -5,3 +5,29 @@ target-version = ['py39']
 [tool.isort]
 profile = "black"
 
+
+[tool.poetry]
+name = "auctioning_platform"
+version = "1.0.0"
+authors = []
+description = ""
+license = "MIT"
+
+[tool.poetry.dependencies]
+python = "^3.9"
+attrs = "^21.2.0"
+Flask = "^2.0.1"
+injector = "^0.18.4"
+SQLAlchemy = "^1.4.23"
+Flask-Injector = "^0.13.0"
+
+[tool.poetry.dev-dependencies]
+black = "^21.9b0"
+mypy = "^0.910"
+pytest = "^6.2.5"
+isort = "^5.9.3"
+flake8 = "^3.9.2"
+
+[build-system]
+requires = ["poetry-core>=1.0.0"]
+build-backend = "poetry.core.masonry.api"
