Add check Makefile's command

--- a/auctioning_platform/Makefile
+++ b/auctioning_platform/Makefile
@@ -5,3 +5,11 @@ lint:
 	black itca tests
 	flake8 itca tests
 	mypy --ignore-missing-imports itca tests
+
+.PHONY: check
+check:
+	isort --check itca tests
+	black --check itca tests
+	flake8 itca tests
+	mypy --ignore-missing-imports itca tests
+
