--- a/auctioning_platform/config.ini
+++ b/auctioning_platform/config.ini
@@ -1,3 +1,17 @@
 [database]
-url = sqlite://
+url = sqlite:///database.sqlite
+
+[alembic]
+script_location = itca/db/migrations
+prepend_sys_path = .
+version_path_separator = os
+
+[post_write_hooks]
+hooks=isort,black
+
+isort.type=console_scripts
+isort.entrypoint=isort
+
+black.type=console_scripts
+black.entrypoint=black
 
