--- a/auctioning_platform/pyproject.toml
+++ b/auctioning_platform/pyproject.toml
@@ -22,6 +22,7 @@ SQLAlchemy = "^1.4.23"
 Flask-Injector = "^0.13.0"
 cattrs = "^1.8.0"
 alembic = "^1.7.3"
+marshmallow = "^3.13.0"
 
 [tool.poetry.dev-dependencies]
 black = "^21.9b0"
