--- a/auctioning_platform/pyproject.toml
+++ b/auctioning_platform/pyproject.toml
@@ -26,6 +26,7 @@ marshmallow = "^3.13.0"
 requests = "^2.26.0"
 yarl = "^1.6.3"
 types-requests = "^2.25.6"
+psycopg2-binary = "^2.9.1"
 
 [tool.poetry.dev-dependencies]
 black = "^21.9b0"
