--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -24,7 +24,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip poetry
         poetry install
-    - name: Run lintes
+    - name: Run linters
       run: |
         poetry run make check
     - name: Test with pytest
