Configure Payments component in main

--- a/auctioning_platform/config.ini
+++ b/auctioning_platform/config.ini
@@ -1,6 +1,10 @@
 [database]
 url = sqlite:///database.sqlite
 
+[bripe]
+username = test
+password = test
+
 [alembic]
 script_location = itca/db/migrations
 prepend_sys_path = .
