--- a/auctioning_platform/pyproject.toml
+++ b/auctioning_platform/pyproject.toml
@@ -28,6 +28,9 @@ yarl = "^1.6.3"
 types-requests = "^2.25.6"
 psycopg2-binary = "^2.9.1"
 celery = {extras = ["redis"], version = "^5.1.2"}
+redis = "^3.5.3"
+pottery = "^1.3.6"
+types-redis = "^3.5.8"
 
 [tool.poetry.dev-dependencies]
 black = "^21.9b0"
