--- a/auctioning_platform/pyproject.toml
+++ b/auctioning_platform/pyproject.toml
@@ -32,6 +32,8 @@ redis = "^3.5.3"
 pottery = "^1.3.6"
 types-redis = "^3.5.8"
 factory-boy = "^3.2.0"
+freezegun = "^1.1.0"
+types-freezegun = "^1.1.0"
 
 [tool.poetry.dev-dependencies]
 black = "^21.9b0"
