--- a/auctioning_platform/pyproject.toml
+++ b/auctioning_platform/pyproject.toml
@@ -34,6 +34,7 @@ types-redis = "^3.5.8"
 factory-boy = "^3.2.0"
 freezegun = "^1.1.0"
 types-freezegun = "^1.1.0"
+retrying = "^1.3.3"
 
 [tool.poetry.dev-dependencies]
 black = "^21.9b0"
